<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.runicrealms.runicguilds.Plugin</groupId>
    <artifactId>RunicGuilds</artifactId>
    <version>1.16.5</version>
    <name>RunicGuilds</name>
    <description>Runic Realms Guilds Plugin</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <fileOutput>${project.basedir}/../lib</fileOutput>
    </properties>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.0.2</version>
                <executions>
                    <execution>
                        <id>copy-files-on-build</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${fileOutput}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${project.build.directory}</directory>
                                    <include>${project.artifactId}-${project.version}.jar</include>
                                    <filtering>false</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <!-- JitPack/Github Repo (Tabbed, other things) -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <!-- Spigot Repo -->
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <!-- Paper Repo -->
        <repository>
            <id>papermc</id>
            <url>https://papermc.io/repo/repository/maven-public/</url>
        </repository>
        <!-- PlaceholderAPI Repo -->
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <!-- ACF Repo -->
        <repository>
            <id>aikar</id>
            <url>https://repo.aikar.co/content/groups/aikar/</url>
        </repository>
        <!-- HolographicDisplays Repo -->
        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.io/repository/maven-public/</url>
        </repository>
    </repositories>
    <dependencies>
        <!-- MythicMobs -->
        <dependency>
            <groupId>net.elseland.xikage</groupId>
            <artifactId>mythicmobs</artifactId>
            <version>4.12.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/../lib/MythicMobs-4.12.0.jar</systemPath>
        </dependency>
        <!-- Spigot API -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.16.5-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- Paper API -->
        <dependency>
            <groupId>com.destroystokyo.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.16.5-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- Placeholder API -->
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.9.2</version>
            <scope>provided</scope>
        </dependency>
        <!-- Placeholder API -->
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.9.2</version>
            <scope>provided</scope>
        </dependency>
        <!-- Runic Chat -->
        <dependency>
            <groupId>com.runicrealms.runicchat.RunicChat</groupId>
            <artifactId>RunicChat</artifactId>
            <version>1.16.5</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/../lib/RunicChat-1.16.5.jar</systemPath>
        </dependency>
        <!-- RunicCore -->
        <dependency>
            <groupId>com.runicrealms.plugin</groupId>
            <artifactId>RunicCore</artifactId>
            <version>1.16.5</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/../lib/RunicCore-1.16.5.jar</systemPath>
        </dependency>
        <!-- RunicItems -->
        <dependency>
            <groupId>com.runicrealms.plugin</groupId>
            <artifactId>RunicItems</artifactId>
            <version>1.16.5</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/../lib/RunicItems-1.16.5.jar</systemPath>
        </dependency>
        <!-- RunicMounts -->
        <dependency>
            <groupId>com.runicrealms.plugin</groupId>
            <artifactId>RunicMounts</artifactId>
            <version>1.16.5</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/../lib/RunicMounts-1.16.5.jar</systemPath>
        </dependency>
        <!-- Runic Npcs -->
        <dependency>
            <groupId>com.runicrealms.runicnpcs</groupId>
            <artifactId>RunicNpcs</artifactId>
            <version>1.16.4</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/../lib/RunicNpcs-1.16.4.jar</systemPath>
        </dependency>
        <!-- Runic Restart -->
        <dependency>
            <groupId>com.runicrealms.runicrestart.Plugin</groupId>
            <artifactId>RunicRestart</artifactId>
            <version>1.16.4</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/../lib/RunicRestart-1.16.4.jar</systemPath>
        </dependency>
        <!-- Tabbed API -->
        <dependency>
            <groupId>com.github.thekeenant</groupId>
            <artifactId>tabbed</artifactId>
            <version>v1.8</version>
        </dependency>
        <!-- HolographicDisplays API -->
        <dependency>
            <groupId>com.gmail.filoghost.holographicdisplays</groupId>
            <artifactId>holographicdisplays-api</artifactId>
            <version>2.4.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>